Prevent App Info from shrinking too much when revision sidebar is open.

--- a/src/app/editor-common/components/app-info/app-info.component.scss
+++ b/src/app/editor-common/components/app-info/app-info.component.scss
@@ -1,5 +1,6 @@
 .app-info {
     margin: 20px;
+    min-width: 600px;
 }
 
 .app-info-item {
